[gd_scene load_steps=7 format=3 uid="uid://bknq20krntau0"]

[ext_resource type="Script" path="res://template_level.gd" id="1_67vup"]
[ext_resource type="PackedScene" uid="uid://cp4r6r8yvg2ic" path="res://background.tscn" id="1_ymfx4"]
[ext_resource type="PackedScene" uid="uid://btdulfgm8j74y" path="res://flag.tscn" id="2_d2if2"]
[ext_resource type="PackedScene" uid="uid://b7bhuq0m72qal" path="res://button.tscn" id="3_4b7d5"]
[ext_resource type="PackedScene" uid="uid://bbhr52f1i6gru" path="res://win_screen.tscn" id="3_p140r"]
[ext_resource type="PackedScene" uid="uid://c141sxkflvbst" path="res://player.tscn" id="4_hj8dx"]

[node name="Level" type="Node2D"]
script = ExtResource("1_67vup")

[node name="Background" parent="." instance=ExtResource("1_ymfx4")]

[node name="RespawnPosition" type="Marker2D" parent="."]
position = Vector2(144, 416)

[node name="Button0" parent="." instance=ExtResource("3_4b7d5")]

[node name="Flag" parent="." instance=ExtResource("2_d2if2")]

[node name="WinScreen" parent="." instance=ExtResource("3_p140r")]
visible = false
offset_right = 960.0
offset_bottom = 512.0

[node name="LevelArt" type="Node2D" parent="."]

[node name="LevelCollision" type="StaticBody2D" parent="."]

[node name="Player" parent="." instance=ExtResource("4_hj8dx")]
player_scene = ExtResource("4_hj8dx")
